2006-09-12  Alex Roitman  <shura@gramps-project.org>
	* src/DateHandler/_Date_fr.py (DateParserFR.init_strings): Typo.
	* src/const.py.in (app_gramps): Revert to using a string.

2006-09-11  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadXML.py: use os.path.isabs
	* src/GrampsDb/_ReadXML.py: don't assume that os.path.sep is the
	first element of an absolute path. Many not be true on some legacy
	operating systems.

2006-09-10  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: path seperator fixes
	* src/GrampsDb/_ReadGedcom.py: path seperator fixes
	* src/GrampsDb/_ReadXML.py: path seperator fixes
	* src/DisplayTabls/_PersonEmbedList.py: enable dnd with people for
	associations

2006-09-09  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs/_EventEmbedList.py: bring up the event reference
	editor on drag-n-drop onto the event reference list
	* src/GrampsDb/_ReadXML.py: remove commented out code
	* src/Editors/_EditEvent.py: handle overwriting of date text
	* src/RelLib/_DateBase.py: allow optional dropping of date text on
	serialization
	* src/RelLib/_Date.py: allow optional dropping of date text on
	serialization
	* src/RelLib/_Event.py: allow optional dropping of date text on
	serialization

2006-09-05  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/Verify.py: Import Errors.

2006-09-04  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: don't delete tabs
	* src/DisplayTabs/_NoteTab.py: allow tabs to be entered

2006-09-03  Don Allingham  <don@gramps-project.org>
	* src/ScratchPad.py: add dnd support for MediaRefs (bug #417)
	* src/DdTargets.py: add dnd support for MediaRefs (bug #417)

2006-09-02  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs/_EventEmbedList.py: Don't override event type on
	a drag-n-drop (bug #420)
	* po/POTFILES.in: remove non-shipping modules

2006-09-01  Brian Matherly  <brian@gramps-project.org>
        * src/plugins/Calendar.py: fix filter typo